--- a/css/src/s_00_main_page.css
+++ b/css/src/s_00_main_page.css
@@ -1,6 +1,8 @@
 #wrap {
   width: 100%;
-  height: 100%;
+  height: auto;
+  min-height: 800px;
+  background-color: #fda;
 }
 
 /*# sourceMappingURL=s_00_main_page.css.map */
