[add]height:ab:높이 수정

--- a/scss/src/s_00_main_page.scss
+++ b/scss/src/s_00_main_page.scss
@@ -3,7 +3,7 @@
 @import "../common/mixin";
 
 // ---------------------------------
-#wrap { width: 100%; height: 100%; }
+#wrap { width: 100%; height: auto; min-height: 800px; background-color: #fda;}
 
 // ---------------------------------
 @import "../page/common/headBox";
